--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -367,17 +367,17 @@
 				<div class="tab sitebar">
 					<ul class="nav nav-tabs">
 						<li class="active"><a  href="#1" data-toggle="tab">Latest</a></li>
-						<li><a href="#2" data-toggle="tab">Populer</a></li>
+						<li><a href="#2" data-toggle="tab">Score</a></li>
 					</ul>
 
 					<div class="tab-content">
 						<div class="tab-pane active" id="1">
-							<div class="media">
+							<div class="media"  th:each="news:${News}">
 								<div class="media-left">
-									<a href="#"><img class="media-object" src="/assets/img/img-list.jpg" alt="Generic placeholder image"></a>
+									<a href="#"><img class="media-object" src="/assets/img/img-list.jpg" th:alt="${news.getImgdescri()}"></a>
 								</div><!--media-left-->
 								<div class="media-body">
-									<h4 class="media-heading"><a href="#">Spain going to made class football</a></h4>
+									<h4 class="media-heading"><a th:href="@{'/'+${news.getGenre().getNom().toLowerCase()}+'-'+${news.getId()}}" th:text="${news.getTitre()}"></a></h4>
 									<span class="rating">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -388,53 +388,6 @@
 								</div><!--media-body-->
 							</div><!--media-->
 
-							<div class="media">
-								<div class="media-left">
-									<a href="#"><img class="media-object" src="/assets/img/img-list5.jpg" alt="Generic placeholder image"></a>
-								</div><!--media-left-->
-								<div class="media-body">
-									<h4 class="media-heading"><a href="#">Spain going to made class football</a></h4>
-									<span class="rating">
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star-half-full"></i>
-									</span>
-								</div><!--media-body-->
-							</div><!--media-->
-
-							<div class="media">
-								<div class="media-left">
-									<a href="#"><img class="media-object" src="/assets/img/img-list2.jpg" alt="Generic placeholder image"></a>
-								</div><!--media-left-->
-								<div class="media-body">
-									<h3 class="media-heading"><a href="#">Spain going to made class football</a></h3>
-									<span class="rating">
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star-half-full"></i>
-									</span>
-								</div><!--media-body-->
-							</div><!--media-->
-
-							<div class="media">
-								<div class="media-left">
-									<a href="#"><img class="media-object" src="/assets/img/img-list3.jpg" alt="Generic placeholder image"></a>
-								</div><!--media-left-->
-								<div class="media-body">
-									<h3 class="media-heading"><a href="#">Spain going to made class football</a></h3>
-									<span class="rating">
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star-half-full"></i>
-									</span>
-								</div><!--media-body-->
-							</div><!--media-->
 						</div><!--tab-pane-->
 
 						<div class="tab-pane" id="2">
