--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -256,7 +256,7 @@
 										</div><!--item_img--> 
 										<div class="item_title_date">
 											<div class="news_item_title">
-												<h2><a th:href="@{'/'+${liste[0].getGenre().getNom().toLowerCase()}+'-'+${liste[0].getId()}+'.html'}" th:text="${liste[0].getTitre()}"></a></h2>
+												<h2><a th:href="@{'/'+${liste[0].getGenre().getNom().toLowerCase()}+'-'+${liste[0].getGenre().getId()}+'-'+${liste[0].getId()}+'.html'}" th:text="${liste[0].getTitre()}"></a></h2>
 											</div><!--news_item_title-->
                                             <div class="item_meta"><a href="#"th:text="${liste[0].getDate().toString()}">,</a> by:<a href="#" th:text="${liste[0].getClient().getNom()}"></a></div>
 										</div><!--item_title_date-->
@@ -274,7 +274,7 @@
 											<a href="#"><img class="media-object" src="/assets/img/img-list.jpg" alt="Generic placeholder image"></a>
 										</div><!--media-left-->
 										<div class="media-body">
-											<h3 class="media-heading"><a th:href="@{'/'+${ls.getGenre().getNom().toLowerCase()}+'-'+${ls.getId()}+'.html'}" th:text="${ls.getTitre()}">
+											<h3 class="media-heading"><a th:href="@{'/'+${ls.getGenre().getNom().toLowerCase()}+'-'+${ls.getGenre().getId()}+'-'+${ls.getId()}+'.html'}" th:text="${ls.getTitre()}">
 											</a></h3>
 
 											<p th:text="${ls.getDescription()}"></p>
@@ -377,7 +377,7 @@
 									<a href="#"><img class="media-object" src="/assets/img/img-list.jpg" th:alt="${news.getImgdescri()}"></a>
 								</div><!--media-left-->
 								<div class="media-body">
-									<h4 class="media-heading"><a th:href="@{'/'+${news.getGenre().getNom().toLowerCase()}+'-'+${news.getId()}}" th:text="${news.getTitre()}"></a></h4>
+									<h4 class="media-heading"><a th:href="@{'/'+${news.getGenre().getNom().toLowerCase()}+'-'+${news.getGenre()}+'-'+${news.getId()}}" th:text="${news.getTitre()}"></a></h4>
 									<span class="rating">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
